# TravianGame

./: .directory  .gitignore  CMakeLists.txt  Makefile  README.md
CMake/: CppLint.cmake  FindNcursesw.cmake
Maps/: Cadia.trvmp  CultistEnemy.trvm  FoodFarm.trvm  GoldMine.trvm  MachineGunPoint.trvm  MainBuilding.trvm  Resources.temp  cadia.txt  kojima200.trvim  logo.txt  Текстовый файл
core/: CMakeLists.txt
core/include/: gComponent.h  gContainer.h  gDialog.h  gEntity.h  gEventManager.h  gFileParser.h  gGraphics.h  gKeyboardEventsHandler.h  gLibsEssential.h  gMap.h  gMouseEventsHandler.h  gPoint.h  gRTTimer.h  gResultsCollector.h  gSystem.h  gTile.h  gTimer.h  g_map_parser.h  g_results_collector.h  g_rt_timer.h  g_timer.h
core/src/: gComponent.cpp  gContainer.cpp  gDialog.cpp  gEntity.cpp  gEventManager.cpp  gFileParser.cpp  gGraphics.cpp  gKeyboardEventsHandler.cpp  gMap.cpp  gMouseEventsHandler.cpp  gPoint.cpp  gRTTimer.cpp  gResultsCollector.cpp  gSystem.cpp  gTile.cpp  gTimer.cpp  g_map_parser.cpp  g_results_collector.cpp  g_rt_timer.cpp  g_timer.cpp
misc/cpplint/: cpplint.py
travian-game/include/: game_rt_loop.h  player.h  position_component.h  render_system.h  spawn_system.h  trvComponentColor.h  trvComponentEnemyAttackRange.h  trvComponentGraphicalModel.h  trvComponentHealth.h  trvComponentInteractionOptions.h  trvComponentLocation.h  trvComponentMaterial.h  trvComponentResourceRequirment.h  trvEntity.h  trvEntityActionMenu.h  trvEntityBuilding.h  trvEntityEnemy.h  trvEntityEnemyCultist.h  trvEntityFoodFarm.h  trvEntityGoldMine.h  trvEntityMachineGunPoint.h  trvEntityMainBuilding.h  trvEntityMaterial.h  trvEntityResourceDomain.h  trvFileParser.h  trvGameCamera.h  trvIOContainerWorld.h  trvMainMenu.h  trvMap.h  trvPtrEntityMap.h  trvSystemBuilding.h  trvSystemCursorMovement.h  trvSystemEnemyAI.h  trvSystemEnemySpawn.h  trvSystemEntityCollision.h  trvSystemKeyboardEventsHandler.h  trvSystemRendering.h  trvSystemStats.h  trvUserInterface.h  trvWidget.h  (+3 more)
travian-game/src/: game_rt_loop.cpp  player.cpp  position_component.cpp  render_system.cpp  spawn_system.cpp  trvComponentColor.cpp  trvComponentEnemyAttackRange.cpp  trvComponentGraphicalModel.cpp  trvComponentHealth.cpp  trvComponentInteractionOptions.cpp  trvComponentLocation.cpp  trvComponentMaterial.cpp  trvComponentResourceRequirment.cpp  trvMain.cpp  (+30 more)
